--- a/etc/init.rc
+++ b/etc/init.rc
@@ -24,6 +24,7 @@ on boot
     ifup lo
     hostname localhost
     domainname localdomain
+    write /sys/class/leds/lcd-backlight/brightness 50
 
     class_start default
 
@@ -39,8 +40,8 @@ service adbd /sbin/adbd recovery
 # In recovery, always run adbd as root.
 on property:ro.debuggable=1
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor 18D1
-    write /sys/class/android_usb/android0/idProduct D001
+    write /sys/class/android_usb/android0/idVendor 1949
+    write /sys/class/android_usb/android0/idProduct 0006
     write /sys/class/android_usb/android0/functions adb
     #write /sys/class/android_usb/android0/enable 1
     write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
