--- a/etc/init.rc
+++ b/etc/init.rc
@@ -24,7 +24,15 @@ on boot
     ifup lo
     hostname localhost
     domainname localdomain
+
+    # limit which partitions can be formatted
+    setprop ro.cwm.forbid_format /bootloader,/dfs,/backup,/splash
+
+    # reduce backlight usage in recovery
     write /sys/class/leds/lcd-backlight/brightness 50
+
+    # compatibility w/ 2.6 kernels
+    symlink /dev/block/platform/omap/omap_hsmmc.1 /dev/block/platform/mmci-omap-hs.1
 
     class_start default
 
@@ -41,8 +49,8 @@ service adbd /sbin/adbd recovery
 on property:ro.debuggable=1
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 1949
-    write /sys/class/android_usb/android0/idProduct 0006
-    write /sys/class/android_usb/android0/functions adb
+    write /sys/class/android_usb/android0/idProduct 0001
+    write /sys/class/android_usb/android0/functions mass_storage,adb
     #write /sys/class/android_usb/android0/enable 1
     write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
     write /sys/class/android_usb/android0/iProduct $ro.product.model
