--- a/etc/init.rc
+++ b/etc/init.rc
@@ -13,7 +13,7 @@ on init
     mkdir /sdcard
     mkdir /sd-ext
     mkdir /datadata
-    mkdir /emmc
+#    mkdir /emmc
     mkdir /system
     mkdir /data
     mkdir /cache
@@ -33,6 +33,10 @@ on boot
 
     # compatibility w/ 2.6 kernels
     symlink /dev/block/platform/omap/omap_hsmmc.1 /dev/block/platform/mmci-omap-hs.1
+
+    symlink /sdcard /emmc
+
+    mount vfat /dev/block/mmcblk0p12 /sdcard
 
     class_start default
 
